--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 
     <h3>get result from picture, upload here</h3>
-    <form action = "http://localhost:5000/get_pic" method="POST" enctype="multipart/form-data">
+    <form action = "<replace this with your ip>/face" method="POST" enctype="multipart/form-data">
         <input type="file" name="file"/>
         <input type="submit"/>
     </form>
